# miniclaw

./: .env.example  .gitignore  README.md  REMINDER.md  biome.json  index.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  vitest.config.ts
apps/backend/: package.json  tsconfig.json
apps/cli/: index.html  package.json  tsconfig.json
apps/website/: components.json  index.html  package.json  tsconfig.json  vite.config.ts
docs/: architecture-plan.md  features.md  phase-1-plan.md
docs/report/: chapters_1_2.md  citation_cleanup_notes.md  content_writing_guideline.md  final_report_toc.md  guidelines.md  official_guideline.md  repo_walkthrough.md
miniclaw/: __init__.py  __main__.py
miniclaw/agent/: __init__.py  loop.py
miniclaw/bus/: __init__.py  message.py  queue.py
miniclaw/channels/: __init__.py  base.py  telegram.py
miniclaw/cli/: __init__.py  commands.py  onboard.py
miniclaw/config/: __init__.py  loader.py  paths.py  schema.py
src/: main.py
src/agent/: agents.ts  compaction.ts  graph.ts  history.ts  loop.ts  memory.ts  middleware.ts  models.ts  nodes.ts  observer.ts  scheduler.ts  security.ts  skills.ts  state.ts  store.ts  systemInfo.ts  tokenizer.ts
src/bus/: message.ts  queue.ts
src/channels/: base.ts  manager.ts  telegram.ts
src/cli/: commands.ts
src/config/: loader.ts  paths.ts  schema.ts
src/scripts/: print-system-prompt.ts
src/template/: AGENTS.md  env.template  env.ts
src/tests/: compaction.test.ts  execute.test.ts  filesystem.test.ts  history.test.ts  memory.test.ts  (+10 more)
(+90 files in other folders)
