[project]
name = "miniclaw"
version = "0.1.0"
description = "Personal AI Assistant for schedule and task management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "deepagents>=0.6.1",
    "dotenv>=0.9.9",
    "langchain-ollama>=1.1.0",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "tavily-python>=0.7.24",
    "typer>=0.25.1",
]

[project.scripts]
miniclaw = "miniclaw.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "miniclaw/**/*.py",
    "miniclaw/templates/**/*.md",
    "miniclaw/skills/**/*.md",
]
